Bug 1588484 - Disable Advanced Layers for now when using fission for the window. r=kmag

Differential Revision: https://phabricator.services.mozilla.com/D53759