widget/nsBaseWidget.h
@@ -691,6 +691,7 @@ class nsBaseWidget : public nsIWidget, public nsSupportsWeakReference {
   nsPopupType mPopupType;
   SizeConstraints mSizeConstraints;
   bool mHasRemoteContent;
+  bool mFissionWindow;
 
   bool mUpdateCursor;
   bool mUseAttachedEvents;
