widget/nsWidgetInitData.h
@@ -112,7 +112,8 @@ struct nsWidgetInitData {
         mMouseTransparent(false),
         mHasRemoteContent(false),
         mAlwaysOnTop(false),
-        mPIPWindow(false) {}
+        mPIPWindow(false),
+        mFissionWindow(false) {}
 
   nsWindowType mWindowType;
   nsBorderStyle mBorderStyle;
@@ -140,6 +141,8 @@ struct nsWidgetInitData {
   bool mAlwaysOnTop;
   // Is PictureInPicture window
   bool mPIPWindow;
+  // True if fission is enabled for this window
+  bool mFissionWindow;
 };
 
 #endif  // nsWidgetInitData_h__
